# training-gate

./: .gitignore  README.md  pyproject.toml  training-gate-audit.jsonl  training-gate-summary.json
examples/: train_with_gates.py
gate/: __init__.py  audit.py  health.py  monitor.py  verify.py
gate-demo-ckpt/: README.md  adapter_config.json
tests/: test_verify.py
